<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/addConfirm"
        android:layout_height="@dimen/add_prod_layout_height"
        android:layout_width="@dimen/add_prod_layout_width"
        android:layout_gravity="end"
        android:layout_margin="@dimen/add_prod_layout_margin"
        style="@style/ButtonMainStyle"
        android:text="@string/add_button"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addProdLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText android:id="@+id/addName"
                style="@style/EditTextStyle"
                android:hint="@string/name"
                />
            <EditText android:id="@+id/water"
                style="@style/NumEditTextStyle"
                android:hint="@string/water" />
            <EditText android:id="@+id/kcal"
                style="@style/NumEditTextStyle"
                android:hint="@string/kcal" />
            <EditText android:id="@+id/protein"
                style="@style/NumEditTextStyle"
                android:hint="@string/protein" />
            <EditText android:id="@+id/lipid_tot"
                style="@style/NumEditTextStyle"
                android:hint="@string/lipid_tot" />
            <EditText android:id="@+id/ash"
                style="@style/NumEditTextStyle"
                android:hint="@string/ash" />
            <EditText android:id="@+id/carbohydrt"
                style="@style/NumEditTextStyle"
                android:hint="@string/carbohydrt" />
            <EditText android:id="@+id/fiber_TD"
                style="@style/NumEditTextStyle"
                android:hint="@string/fiber_TD" />
            <EditText android:id="@+id/sugar_Tot"
                style="@style/NumEditTextStyle"
                android:hint="@string/sugar_Tot" />
            <EditText android:id="@+id/calcium"
                style="@style/NumEditTextStyle"
                android:hint="@string/calcium" />
            <EditText android:id="@+id/iron"
                style="@style/NumEditTextStyle"
                android:hint="@string/iron" />
            <EditText android:id="@+id/magnesium"
                style="@style/NumEditTextStyle"
                android:hint="@string/magnesium" />
            <EditText android:id="@+id/phosphorus"
                style="@style/NumEditTextStyle"
                android:hint="@string/phosphorus" />
            <EditText android:id="@+id/potassium"
                style="@style/NumEditTextStyle"
                android:hint="@string/potassium" />
            <EditText android:id="@+id/sodium"
                style="@style/NumEditTextStyle"
                android:hint="@string/sodium" />
            <EditText android:id="@+id/zinc"
                style="@style/NumEditTextStyle"
                android:hint="@string/zinc" />
            <EditText android:id="@+id/copper"
                style="@style/NumEditTextStyle"
                android:hint="@string/copper" />
            <EditText android:id="@+id/manganese"
                style="@style/NumEditTextStyle"
                android:hint="@string/manganese" />
            <EditText android:id="@+id/selenium"
                style="@style/NumEditTextStyle"
                android:hint="@string/selenium" />
            <EditText android:id="@+id/vit_C"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_C" />
            <EditText android:id="@+id/thiamin"
                style="@style/NumEditTextStyle"
                android:hint="@string/thiamin" />
            <EditText android:id="@+id/riboflavin"
                style="@style/NumEditTextStyle"
                android:hint="@string/riboflavin" />
            <EditText android:id="@+id/niacin"
                style="@style/NumEditTextStyle"
                android:hint="@string/niacin" />
            <EditText android:id="@+id/panto_Acid"
                style="@style/NumEditTextStyle"
                android:hint="@string/panto_Acid" />
            <EditText android:id="@+id/vit_B6"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_B6" />
            <EditText android:id="@+id/folate_Tot"
                style="@style/NumEditTextStyle"
                android:hint="@string/folate_Tot" />
            <EditText android:id="@+id/folic_Acid"
                style="@style/NumEditTextStyle"
                android:hint="@string/folic_Acid" />
            <EditText android:id="@+id/food_Folate"
                style="@style/NumEditTextStyle"
                android:hint="@string/food_Folate" />
            <EditText android:id="@+id/folate_DFE"
                style="@style/NumEditTextStyle"
                android:hint="@string/folate_DFE" />
            <EditText android:id="@+id/choline_Tot"
                style="@style/NumEditTextStyle"
                android:hint="@string/choline_Tot" />
            <EditText android:id="@+id/vit_B12"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_B12" />
            <EditText android:id="@+id/vit_A_IU"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_A_IU" />
            <EditText android:id="@+id/vit_A_RAE"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_A_RAE" />
            <EditText android:id="@+id/retinol"
                style="@style/NumEditTextStyle"
                android:hint="@string/retinol" />
            <EditText android:id="@+id/alpha_Carot"
                style="@style/NumEditTextStyle"
                android:hint="@string/alpha_Carot" />
            <EditText android:id="@+id/beta_Carot"
                style="@style/NumEditTextStyle"
                android:hint="@string/beta_Carot" />
            <EditText android:id="@+id/beta_Crypt"
                style="@style/NumEditTextStyle"
                android:hint="@string/beta_Crypt" />
            <EditText android:id="@+id/lycopene"
                style="@style/NumEditTextStyle"
                android:hint="@string/lycopene" />
            <EditText android:id="@+id/lutZea"
                style="@style/NumEditTextStyle"
                android:hint="@string/lutZea" />
            <EditText android:id="@+id/vit_E"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_E" />
            <EditText android:id="@+id/vit_D_µg"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_D_µg" />
            <EditText android:id="@+id/vit_D_IU"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_D_IU" />
            <EditText android:id="@+id/vit_K"
                style="@style/NumEditTextStyle"
                android:hint="@string/vit_K" />
            <EditText android:id="@+id/FA_Sat"
                style="@style/NumEditTextStyle"
                android:hint="@string/FA_Sat" />
            <EditText android:id="@+id/FA_Mono"
                style="@style/NumEditTextStyle"
                android:hint="@string/FA_Mono" />
            <EditText android:id="@+id/FA_Poly"
                style="@style/NumEditTextStyle"
                android:hint="@string/FA_Poly" />
            <EditText android:id="@+id/cholestrl"
                style="@style/NumEditTextStyle"
                android:hint="@string/cholestrl" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>